# alta-core

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  azure-pipelines.yml
include/: altacore.hpp
include/altacore/: any.hpp  ast-shared.hpp  ast.hpp  attributes.hpp  det-shared.hpp  det.hpp  detail-handles.hpp  errors.hpp  event-manager.hpp  fs.hpp  generic-parser.hpp  generic-parser.tpp  lexer.hpp  logging.hpp  modules.hpp  optional.hpp  parser.hpp  preprocessor.hpp  shared.hpp  simple-map.hpp  timing.hpp  util.hpp  validator.hpp  variant.hpp
include/altacore/ast/: accessor.hpp  alias-statement.hpp  assertion-statement.hpp  assignment-expression.hpp  attribute-node.hpp  attribute-statement.hpp  await-expression.hpp  binary-operation.hpp  bitfield-definition-node.hpp  block-node.hpp  boolean-literal-node.hpp  cast-expression.hpp  character-literal-node.hpp  class-definition-node.hpp  class-instantiation-expression.hpp  class-member-definition-statement.hpp  class-method-definition-statement.hpp  class-operator-definition-statement.hpp  class-read-accessor-definition-statement.hpp  class-special-method-definition-statement.hpp  class-statement-node.hpp  code-literal-node.hpp  conditional-expression.hpp  conditional-statement.hpp  control-directive.hpp  delete-statement.hpp  dereference-expression.hpp  enumeration-definition-statement.hpp  export-statement.hpp  expression-node.hpp  expression-statement.hpp  fetch.hpp  floating-point-literal-node.hpp  for-loop-statement.hpp  function-call-expression.hpp  function-declaration-node.hpp  function-definition-node.hpp  generic.hpp  import-statement.hpp  instanceof-expression.hpp  (+28 more)
include/altacore/det/: alias.hpp  class.hpp  function.hpp  module.hpp  namespace.hpp  node.hpp  scope-item.hpp  scope.hpp  type.hpp  variable.hpp
src/: altacore.cpp  attributes.cpp  errors.cpp  fs.cpp  lexer.cpp  logging.cpp  modules.cpp  parser.cpp  preprocessor.cpp  timing.cpp  util.cpp  validator.cpp
src/ast/: README.md  accessor.cpp  alias-statement.cpp  assertion-statement.cpp  assignment-expression.cpp  attribute-node.cpp  attribute-statement.cpp  await-expression.cpp  binary-operation.cpp  bitfield-definition-node.cpp  block-node.cpp  boolean-literal-node.cpp  cast-expression.cpp  character-literal-node.cpp  class-definition-node.cpp  class-instantiation-expression.cpp  class-member-definition-statement.cpp  class-method-definition-statement.cpp  class-operator-definition-statement.cpp  class-read-accessor-definition-statement.cpp  class-special-method-definition-statement.cpp  class-statement-node.cpp  code-literal-node.cpp  conditional-expression.cpp  conditional-statement.cpp  control-directive.cpp  delete-statement.cpp  dereference-expression.cpp  enumeration-definition-statement.cpp  export-statement.cpp  expression-node.cpp  expression-statement.cpp  fetch.cpp  floating-point-literal-node.cpp  for-loop-statement.cpp  function-call-expression.cpp  function-declaration-node.cpp  function-definition-node.cpp  generic.cpp  import-statement.cpp  (+29 more)
src/det/: alias.cpp  class.cpp  function.cpp  module.cpp  namespace.cpp  node.cpp  scope-item.cpp  scope.cpp  type.cpp  variable.cpp
